# kamalie

./: .gitignore  Cargo.toml  Makefile  README.md  bacon.toml  book.toml
src/: SUMMARY.md  main.rs
src/application/: movement.rs
src/application/util/: rand.rs
src/domain/components/: mod.rs
src/domain/entities/npc/: setup.rs  spawn.rs
src/domain/npc/: setup.rs  spawn.rs
src/domain/user/: setup.rs
src/domain/world/: setup.rs
src/plugins/: mod.rs
